kubernetes-https-deployment/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-svc
spec:
  type: NodePort
  selector:
    app: https-web
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32765
